@@ -1,0 +1,5 @@
+LIBRARY MSIMG32.DLL
+EXPORTS
+AlphaBlend@44
+GradientFill@24
+TransparentBlt@44
